test/compile_errors/err_unreachable_after_todo.w
//! expect-error: unreachable code

fn main:
    todo("not implemented")
    print("never")
